--- a/admin/a/index.html
+++ b/admin/a/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/lp-logo.png" />
+    <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Launchpad Coworking</title>
+    <title>ResV</title>
   </head>
   <body>
     <div id="root"></div>
